--- a/index.html
+++ b/index.html
@@ -3,18 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>trip-track-fleet-flow</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>EVCORE</title>
+    <meta name="description" content="EVCORE Project" />
+    <meta name="author" content="EVCORE Team" />
 
-    <meta property="og:title" content="trip-track-fleet-flow" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="EVCORE" />
+    <meta property="og:description" content="EVCORE Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
