--- a/index.html
+++ b/index.html
@@ -17,3 +17,14 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+export default defineConfig({
+  plugins: [react()],
+  build: {
+    rollupOptions: {
+      input: {
+        main: './index.html',
+      },
+    },
+  },
+});
