Made SideBar Floating

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EVCORE</title>
+    <title>EVCORE Platform</title>
     <meta name="description" content="EVCORE Project" />
     <meta name="author" content="EVCORE Team" />
 
-    <meta property="og:title" content="EVCORE" />
+    <meta property="og:title" content="EVCORE Platform" />
     <meta property="og:description" content="EVCORE Project" />
     <meta property="og:type" content="website" />
   </head>
